# ray-tracing

./: .gitignore  CMakeLists.txt  Main  README.md  a.out  data_type.cpp  img.ppm  main.cpp  no_nvh.txt  out  test.cpp  time_benchmark.cpp
docs/: log
include/: aabb.h  bvh_node.h  camera.h  color.h  common.h  dielectric.h  hit_record.h  hittable.h  hittable_list.h  interval.h  lambertian.h  material.h  metal.h  ray.h  sphere.h  vec3.h  vec3.h.in
src/: CMakeLists.txt  aabb.cpp  bvh_node.cpp  camera.cpp  color.cpp  common.cpp  dielectric.cpp  hit_record.cpp  hittable_list.cpp  interval.cpp  lambertian.cpp  metal.cpp  ray.cpp  sphere.cpp  vec3.cpp.in
tests/: CMakeLists.txt  material_tests.cpp  sphere_tests.cpp  test.cpp
